# internal/server/server.go
@@ -47,30 +47,30 @@ func New(database *db.Database, conf *config.Config) *Server {
 	tasks.GET("/comlpeted", srv.getCompletedTasks)
 	tasks.GET("/uncompleted", srv.getUncompletedTasks)
 	tasks.POST("", srv.createTask)
-	tasks.GET("/:id", srv.getTask)
-	tasks.PUT("/:id", srv.updateTask)
-	tasks.DELETE("/:id", srv.deleteTask)
-	tasks.POST("/:id/complete", srv.completeTask)
-	tasks.POST("/:id/uncomplete", srv.uncompleteTask)
+	tasks.GET("/:task_id", srv.getTask)
+	tasks.PUT("/:task_id", srv.updateTask)
+	tasks.DELETE("/:task_id", srv.deleteTask)
+	tasks.POST("/:task_id/complete", srv.completeTask)
+	tasks.POST("/:task_id/uncomplete", srv.uncompleteTask)
+
+	taskLabels := tasks.Group("/:task_id/labels")
+	taskLabels.POST("/:label_id", srv.addLabelToTask)
+	taskLabels.DELETE("/:label_id", srv.removeLabelFromTask)
 
 	comments := tasks.Group("/:task_id/comments")
 	comments.GET("", srv.getTaskComments)
 	comments.POST("", srv.createTaskComment)
-	comments.GET("/:id", srv.getTaskComment)
-	comments.PUT("/:id", srv.updateTaskComment)
-	comments.DELETE("/:id", srv.deleteTaskComment)
+	comments.GET("/:comment_id", srv.getTaskComment)
+	comments.PUT("/:comment_id", srv.updateTaskComment)
+	comments.DELETE("/:comment_id", srv.deleteTaskComment)
 
 	labels := restricted.Group("/labels")
 	labels.GET("", srv.getLabels)
+	labels.GET("/tasks", srv.getTasksForLabel)
 	labels.POST("", srv.createLabel)
-	labels.GET("/:id", srv.getLabel)
-	labels.PUT("/:id", srv.updateLabel)
-	labels.DELETE("/:id", srv.deleteLabel)
-
-	labelTasks := labels.Group("/:label_id/tasks")
-	labelTasks.GET("", srv.getTasksForLabel)
-	labelTasks.POST("/:task_id", srv.addLabelToTask)
-	labelTasks.DELETE("/:task_id", srv.removeLabelFromTask)
+	labels.GET("/:label_id", srv.getLabel)
+	labels.PUT("/:label_id", srv.updateLabel)
+	labels.DELETE("/:label_id", srv.deleteLabel)
 
 	return srv
 }
