# internal/server/task.go
@@ -136,7 +136,7 @@ func (s *Server) createTask(c echo.Context) error {
 }
 
 type getTaskResponse struct {
-	ID          uint       `json:"id"`
+	ID          uint       `json:"task_id"`
 	Title       string     `json:"title"`
 	Description string     `json:"description"`
 	DueDate     *time.Time `json:"dueDate"`
@@ -159,32 +159,14 @@ func mapTaskToResponse(task *db.Task) *getTaskResponse {
 // @Description Get one task.
 // @Tags tasks
 // @Param Authorization header string true "Authorization"
-// @Param id path string true "Task ID"
+// @Param task_id path string true "Task ID"
 // @Response 200 {object} server.getTaskResponse
-// @Router /tasks/{id} [get]
+// @Router /tasks/{task_id} [get]
 func (s *Server) getTask(c echo.Context) error {
-	taskID, err := strconv.Atoi(c.Param("id"))
+	task, err := s.findTask(c)
 	if err != nil {
 		log.Error(err)
 
-		return echo.ErrBadRequest
-	}
-
-	task, err := s.Database.GetTask(taskID)
-	if err != nil {
-		log.Error(err)
-
-		return echo.ErrBadRequest
-	}
-
-	userID, err := getUserID(c)
-	if err != nil {
-		log.Error(err)
-
-		return echo.ErrUnauthorized
-	}
-
-	if task.UserID != userID {
 		return echo.ErrUnauthorized
 	}
 
@@ -195,32 +177,14 @@ func (s *Server) getTask(c echo.Context) error {
 // @Description Update one task.
 // @Tags tasks
 // @Param Authorization header string true "Authorization"
-// @Param id path string true "Task ID"
+// @Param task_id path string true "Task ID"
 // @Param task body server.createTaskRequest true "Task"
-// @Router /tasks/{id} [put]
+// @Router /tasks/{task_id} [put]
 func (s *Server) updateTask(c echo.Context) error {
-	taskID, err := strconv.Atoi(c.Param("id"))
+	task, err := s.findTask(c)
 	if err != nil {
 		log.Error(err)
 
-		return echo.ErrBadRequest
-	}
-
-	task, err := s.Database.GetTask(taskID)
-	if err != nil {
-		log.Error(err)
-
-		return echo.ErrBadRequest
-	}
-
-	userID, err := getUserID(c)
-	if err != nil {
-		log.Error(err)
-
-		return echo.ErrUnauthorized
-	}
-
-	if task.UserID != userID {
 		return echo.ErrUnauthorized
 	}
 
@@ -231,7 +195,7 @@ func (s *Server) updateTask(c echo.Context) error {
 		return echo.ErrBadRequest
 	}
 
-	if err := s.Database.UpdateTask(taskID, req.Title, req.Description, req.DueDate); err != nil {
+	if err := s.Database.UpdateTask(int(task.ID), req.Title, req.Description, req.DueDate); err != nil {
 		log.Error(err)
 
 		return echo.ErrInternalServerError
@@ -244,35 +208,17 @@ func (s *Server) updateTask(c echo.Context) error {
 // @Description Delete one task.
 // @Tags tasks
 // @Param Authorization header string true "Authorization"
-// @Param id path string true "Task ID"
-// @Router /tasks/{id} [delete]
+// @Param task_id path string true "Task ID"
+// @Router /tasks/{task_id} [delete]
 func (s *Server) deleteTask(c echo.Context) error {
-	taskID, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		log.Error(err)
-
-		return echo.ErrBadRequest
-	}
-
-	task, err := s.Database.GetTask(taskID)
-	if err != nil {
-		log.Error(err)
-
-		return echo.ErrBadRequest
-	}
-
-	userID, err := getUserID(c)
+	task, err := s.findTask(c)
 	if err != nil {
 		log.Error(err)
 
 		return echo.ErrUnauthorized
 	}
 
-	if task.UserID != userID {
-		return echo.ErrUnauthorized
-	}
-
-	if err := s.Database.DeleteTask(taskID); err != nil {
+	if err := s.Database.DeleteTask(int(task.ID)); err != nil {
 		log.Error(err)
 
 		return echo.ErrInternalServerError
@@ -285,33 +231,17 @@ func (s *Server) deleteTask(c echo.Context) error {
 // @Description Complete one task.
 // @Tags tasks
 // @Param Authorization header string true "Authorization"
-// @Param id path string true "Task ID"
-// @Router /tasks/{id}/complete [post]
+// @Param task_id path string true "Task ID"
+// @Router /tasks/{task_id}/complete [post]
 func (s *Server) completeTask(c echo.Context) error {
-	taskID, err := strconv.Atoi(c.Param("id"))
+	task, err := s.findTask(c)
 	if err != nil {
 		log.Error(err)
 
-		return echo.ErrBadRequest
-	}
-
-	task, err := s.Database.GetTask(taskID)
-	if err != nil {
-		log.Error(err)
-
-		return echo.ErrBadRequest
-	}
-
-	userID, err := getUserID(c)
-	if err != nil {
-		log.Error(err)
-	}
-
-	if task.UserID != userID {
 		return echo.ErrUnauthorized
 	}
 
-	if err := s.Database.CompleteTask(taskID); err != nil {
+	if err := s.Database.CompleteTask(int(task.ID)); err != nil {
 		log.Error(err)
 
 		return echo.ErrInternalServerError
@@ -324,37 +254,106 @@ func (s *Server) completeTask(c echo.Context) error {
 // @Description uncomplete one task.
 // @Tags tasks
 // @Param Authorization header string true "Authorization"
-// @Param id path string true "Task ID"
-// @Router /tasks/{id}/uncomplete [post]
+// @Param task_id path string true "Task ID"
+// @Router /tasks/{task_id}/uncomplete [post]
 func (s *Server) uncompleteTask(c echo.Context) error {
-	taskID, err := strconv.Atoi(c.Param("id"))
+	task, err := s.findTask(c)
 	if err != nil {
 		log.Error(err)
 
-		return echo.ErrBadRequest
-	}
-
-	task, err := s.Database.GetTask(taskID)
-	if err != nil {
-		log.Error(err)
-
-		return echo.ErrBadRequest
-	}
-
-	userID, err := getUserID(c)
-	if err != nil {
-		log.Error(err)
-	}
-
-	if task.UserID != userID {
 		return echo.ErrUnauthorized
 	}
 
-	if err := s.Database.UncompleteTask(taskID); err != nil {
+	if err := s.Database.UncompleteTask(int(task.ID)); err != nil {
 		log.Error(err)
 
 		return echo.ErrInternalServerError
 	}
 
 	return c.JSON(http.StatusOK, echo.Map{})
+}
+
+// @Summary Add label to task.
+// @Description Add label to task.
+// @Tags labels
+// @Param Authorization header string true "Authorization"
+// @Param task_id path string true "Task ID"
+// @Param label_id path string true "Label ID"
+// @Router /tasks/{task_id}/labels/{label_id} [get]
+func (s *Server) addLabelToTask(c echo.Context) error {
+	label, err := s.findLabel(c)
+	if err != nil {
+		log.Error(err)
+
+		return echo.ErrUnauthorized
+	}
+
+	task, err := s.findTask(c)
+	if err != nil {
+		log.Error(err)
+
+		return echo.ErrUnauthorized
+	}
+
+	if err := s.Database.AddLabelToTask(int(label.ID), int(task.ID)); err != nil {
+		log.Error(err)
+
+		return echo.ErrInternalServerError
+	}
+
+	return c.JSON(http.StatusOK, echo.Map{})
+}
+
+// @Summary Remove label from task.
+// @Description Remove label from task.
+// @Tags labels
+// @Param Authorization header string true "Authorization"
+// @Param task_id path string true "Task ID"
+// @Param label_id path string true "Label ID"
+// @Router tasks/{task_id}/labels/{label_id}/ [delete]
+func (s *Server) removeLabelFromTask(c echo.Context) error {
+	label, err := s.findLabel(c)
+	if err != nil {
+		log.Error(err)
+
+		return echo.ErrUnauthorized
+	}
+
+	task, err := s.findTask(c)
+	if err != nil {
+		log.Error(err)
+
+		return echo.ErrUnauthorized
+	}
+
+	if err := s.Database.RemoveLabelFromTask(int(label.ID), int(task.ID)); err != nil {
+		log.Error(err)
+
+		return echo.ErrInternalServerError
+	}
+
+	return c.JSON(http.StatusOK, echo.Map{})
+}
+
+func (s *Server) findTask(c echo.Context) (*db.Task, error) {
+	taskID, err := strconv.Atoi(c.Param("task_id"))
+	if err != nil {
+		return nil, err
+	}
+
+	task, err := s.Database.GetTask(taskID)
+	if err != nil {
+		return nil, err
+	}
+
+	userID, err := getUserID(c)
+	if err != nil {
+		return nil, err
+	}
+
+	if task.UserID != userID {
+		return nil, err
+	}
+
+	return task, nil
 }
